--- a/package.json
+++ b/package.json
@@ -3,12 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.7.7",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "animate.css": "^3.7.2",
+    "aos": "^3.0.0-beta.6",
+    "bootstrap": "^4.4.1",
+    "canvasjs": "^1.8.3",
+    "compass": "^0.1.1",
+    "font-awesome-icons": "^1.6.0",
+    "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "^16.13.1",
+    "react-parallax": "^3.0.0",
+    "react-particles-js": "^2.7.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
+    "react-scroll-parallax": "^2.2.0",
+    "react-strap": "0.0.1",
+    "react-typing-effect": "^2.0.3",
+    "reactstrap": "^8.5.1",
+    "rxjs": "^6.5.5",
+    "webkit-npm": "^3.1.1",
+    "wow.js": "^1.2.2",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.8.3"
   }
 }
