--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-cam": "^1.1.11",
     "react-dom": "^16.13.1",
     "react-parallax": "^3.0.0",
     "react-particles-js": "^2.7.0",
