--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-cam": "^1.1.11",
     "react-dom": "^16.13.1",
@@ -31,11 +32,13 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-scroll": "^1.8.1",
     "react-scroll-parallax": "^2.2.0",
     "react-strap": "0.0.1",
     "react-typing-effect": "^2.0.3",
     "reactstrap": "^8.5.1",
     "rxjs": "^6.5.5",
+    "smoothscroll-polyfill": "^0.4.4",
     "webkit-npm": "^3.1.1",
     "wow.js": "^1.2.2",
     "wowjs": "^1.1.3"
